--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {},
   "devDependencies": {
+    "@vuepress/plugin-medium-zoom": "^1.9.7",
     "vuepress": "^1.8.2"
   },
   "scripts": {
