--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "scripts": {
     "docs:dev": "vuepress dev",
-    "docs:build": "vuepress build docs",
+    "docs:build": "vuepress build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
