--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "vuepress": "^1.8.2"
   },
   "scripts": {
-    "docs:dev": "vuepress dev",
-    "docs:build": "vuepress build",
+    "docs:dev": "vuepress dev --no-cache",
+    "docs:build": "vuepress build --no-cache",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
