--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,13 @@ on: [push]
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+    container: ubuntu:20.04
     steps:
+     - name: Obtain Latest Git ONLY within container for checkout
+       run: |
+         apt-get update
+         apt-get install -y git
+
     - name: Checkout
       uses: actions/checkout@master
 
