--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,6 @@ jobs:
          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
          TARGET_REPO: DevnagriAI/devnagri_docs
          TARGET_BRANCH: docs
-         BUILD_SCRIPT: yarn && yarn docs:build
+         BUILD_SCRIPT: yarn && yarn docs:build --no-cache
          BUILD_DIR: public/
          CNAME: https://support.devnagri.com
